appId: com.kylebrowning.landmarks
---
- launchApp
- tapOn: "Deep Links"
- tapOn: "Mountains → Yosemite Valley"
- assertVisible: "Yosemite, CA"
- takeScreenshot: "Arrow"
