appId: com.kylebrowning.landmarks
---
- launchApp
- tapOn: "Golden Gate Bridge"
- assertVisible: "San Francisco, CA"
- assertVisible: "Definitely Not Here"
