appId: com.kylebrowning.Landmarks
---
- launchApp
- tapOn: "Mountains"
- tapOn: "Mount \"Denali\""
- assertVisible: "Alaska"
- assertNotVisible: "Mount \"Denali\" 🏔️"
- takeScreenshot: "Mount \"Denali\" 🏔️"
